ChangeLog:

nx-X11-3.2.0-1

- Opened the 3.2.0 branch based on nx-X11-3.1.0-6.

nx-X11-3.1.0-6

- Modified Xserver Imakefile to link the Xfixes library.

nx-X11-3.1.0-5

- Disabled the terminate action, just in case the TerminateServer
  symbol is binded to a non default key sequence.

nx-X11-3.1.0-4

- Imported patch fixing issues from  X.Org security advisory, January
  17th, 2008: Multiple vulnerabilities in the X server.  CVE IDs:
  CVE-2007-5760    CVE-2007-5958    CVE-2007-6427   CVE-2007-6428
  CVE-2007-6429    CVE-2008-0006.

nx-X11-3.1.0-3

- Moved a variable definition placed in _mesa_make_current().

nx-X11-3.1.0-2

- Fixed TR10E01924. A crash could occur in _mesa_make_current().

- Initialized after_ret variable in _XcmsGetProperty().

nx-X11-3.1.0-1

- Opened the 3.1.0 branch based on nx-X11-3.0.0-37.

nx-X11-3.0.0-37

- Changed the Xserver Imakefile to link against Xcomposite on the
  Cygwin platform too.

nx-X11-3.0.0-36

- Fixed TR07E01806. Modified host.def to build GLX code with symbol
  __GLX_ALIGN64 defined on Solaris platform.

nx-X11-3.0.0-35

- Flush explicitly the NX link before entering the select() in the
  WaitForReadable() and WaitForWritable() routines.

nx-X11-3.0.0-34

- Changed the agent Imakefile to link to the Xcomposite library.

nx-X11-3.0.0-33

- Fix the NX_TRANS_WAKEUP stuff in WaitForSomething() to not over-
  ride a valid timeout.

- Check if the requesting client is gone in the XFixes functions
  sending the cursor events.

nx-X11-3.0.0-32

- Define DDXOSVERRORF and DDXOSFATALERROR symbols on Sun.

- Changed the copyright attribution from Medialogic to NoMachine.

nx-X11-3.0.0-31

- Make SmartScheduleStopTimer() visible outside Xserver/os/utils.c
  so that it can be called by the agent. Export the declaration in
  dixstruct.h. 

nx-X11-3.0.0-30

- The OsVendorVErrorFFatal flag is set to 1 if the function pointed
  by OsVendorVErrorFProc is called due to a fatal error.
